<resources>
    <string name="app_name">Calculator</string>

    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>


    <string name="clear">C</string>
    <string name="plusMinus">+/-</string>
    <string name="divide">&#0247;</string>
    <string name="multiply">&#0215;</string>
    <string name="subtract">-</string>
    <string name="add">+</string>
    <string name="point">,</string>
    <string name="equal">=</string>
    <string name="mode">%</string>
    <string name="backspace"> </string>
    <string name="enter">Enter</string>


</resources>