<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#111010"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView8"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="end"
        android:textColor="#FFFFFF"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginBottom="17dp"
        android:background="#111010"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        app:layout_constraintVertical_bias="0.94">


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/clear"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="2"
                android:background="@drawable/circle"
                android:backgroundTint="#b58484"
                android:onClick="clear"
                android:text="@string/clear"
                android:textSize="36sp" />

            <Button
                android:id="@+id/Mode"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"

                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:backgroundTint="#8f8f8f"

                android:onClick="divideHundreds"
                android:text="@string/mode"
                android:textColor="#FFFFFF"
                android:textSize="36sp" />

            <Button
                android:id="@+id/divide"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"

                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:backgroundTint="#fca10f"

                android:onClick="divide"
                android:text="@string/divide"
                android:textColor="#FFFFFF"
                android:textSize="36sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/seven"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"

                android:layout_weight="1"
                android:background="@drawable/circle"
                android:backgroundTint="#3b3b3b"

                android:onClick="seven"
                android:text="@string/seven"
                android:textColor="#FFFFFF"
                android:textSize="36sp" />

            <Button
                android:id="@+id/eight"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"

                android:layout_weight="1"
                android:background="@drawable/circle"
                android:backgroundTint="#3b3b3b"

                android:onClick="eight"
                android:text="@string/eight"
                android:textColor="#FFFFFF"
                android:textSize="36sp" />

            <Button
                android:id="@+id/nine"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"

                android:layout_weight="1"
                android:background="@drawable/circle"
                android:backgroundTint="#3b3b3b"

                android:onClick="nine"
                android:text="@string/nine"
                android:textColor="#FFFFFF"
                android:textSize="36sp" />

            <Button
                android:id="@+id/multiply"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"

                android:layout_weight="1"
                android:background="@drawable/circle"
                android:backgroundTint="#fca10f"

                android:onClick="multiply"
                android:text="@string/multiply"
                android:textColor="#FFFFFF"
                android:textSize="36sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/four"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"

                android:layout_weight="1"
                android:background="@drawable/circle"
                android:backgroundTint="#3b3b3b"

                android:onClick="four"
                android:text="@string/four"
                android:textColor="#FFFFFF"
                android:textSize="36sp" />

            <Button
                android:id="@+id/five"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"

                android:layout_weight="1"
                android:background="@drawable/circle"
                android:backgroundTint="#3b3b3b"

                android:onClick="five"
                android:text="@string/five"
                android:textColor="#FFFFFF"
                android:textSize="36sp" />

            <Button
                android:id="@+id/six"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"

                android:layout_weight="1"
                android:background="@drawable/circle"
                android:backgroundTint="#3b3b3b"

                android:onClick="six"
                android:text="@string/six"
                android:textColor="#FFFFFF"
                android:textSize="36sp" />

            <Button
                android:id="@+id/minus"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"

                android:layout_weight="1"
                android:background="@drawable/circle"
                android:backgroundTint="#fca10f"

                android:onClick="subtract"
                android:text="@string/subtract"
                android:textColor="#FFFFFF"
                android:textSize="36sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/three"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"

                android:layout_weight="1"
                android:background="@drawable/circle"
                android:backgroundTint="#3b3b3b"

                android:onClick="three"
                android:text="@string/three"
                android:textColor="#FFFFFF"
                android:textSize="36sp" />

            <Button
                android:id="@+id/two"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"

                android:layout_weight="1"
                android:background="@drawable/circle"
                android:backgroundTint="#3b3b3b"

                android:onClick="two"
                android:text="@string/two"
                android:textColor="#FFFFFF"
                android:textSize="36sp" />

            <Button
                android:id="@+id/one"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"

                android:layout_weight="1"
                android:background="@drawable/circle"
                android:backgroundTint="#3b3b3b"

                android:onClick="one"
                android:text="@string/one"
                android:textColor="#FFFFFF"
                android:textSize="36sp" />

            <Button
                android:id="@+id/add"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"

                android:layout_weight="1"
                android:background="@drawable/circle"
                android:backgroundTint="#fca10f"

                android:onClick="add"
                android:text="@string/add"
                android:textColor="#FFFFFF"
                android:textSize="36sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/zero"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"

                android:layout_weight="2"
                android:background="@drawable/circle"
                android:backgroundTint="#3b3b3b"
                android:onClick="zero"
                android:text="@string/zero"
                android:textColor="#FFFFFF"
                android:textSize="36sp" />


            <Button
                android:id="@+id/point"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"

                android:layout_weight="1"
                android:background="@drawable/circle"
                android:backgroundTint="#3b3b3b"

                android:onClick="point"
                android:text="."
                android:textColor="#FFFFFF"
                android:textSize="36sp" />

            <Button
                android:id="@+id/equal"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"

                android:layout_weight="1"
                android:background="@drawable/circle"
                android:backgroundTint="#fca10f"
                android:onClick="equal"
                android:text="="
                android:textColor="#FFFFFF"
                android:textSize="36sp" />

        </TableRow>
    </TableLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        app:adSize="BANNER"
        app:adUnitId="ca-app-pub-3135462600729764/3982646265"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.66"
        app:layout_constraintStart_toStartOf="@+id/textView8"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"></com.google.android.gms.ads.AdView>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        app:adSize="BANNER"
        app:adUnitId="ca-app-pub-3135462600729764/4542905116"
        app:layout_constraintBottom_toBottomOf="@+id/textView8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.110000014" ></com.google.android.gms.ads.AdView>


</androidx.constraintlayout.widget.ConstraintLayout>